--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ select {
     display: flex;
 }
 
+.flex-column{
+    flex-direction: column;
+}
+
 .space-between{
     justify-content: space-between;
 }
@@ -66,7 +70,7 @@ select {
 /* -- < FONTS > ---------------------------------------------------- */
 
 h1 {
-    font-family: "Volkhov", serif;
+   
     font-size: 100px;
     font-weight: 600;
     letter-spacing: -4px;
@@ -78,9 +82,25 @@ h1 {
 }
 
 h2{
+    font-size: 52px; 
+    color: #14183E;
+}
+
+h1, h2{
+    font-family: "Volkhov", serif;
+}
+
+h3{
     text-transform: uppercase;
-    font-weight: 800 ;
+    font-weight: 800;
     color: #DF6951;
+}
+
+h4 {
+    color: #5E6282;
+    font-weight: 700;
+    font-size: 18px;
+    text-transform: uppercase;
 }
 
 p {
@@ -96,7 +116,12 @@ p {
     font-weight: 600;
 }
 
-/* -- < CLASSES > ---------------------------------------------------- */
+.service-title{
+    color: #1E1D4C;
+    font-size: 20px;
+}
+
+/* -- < HEADER CLASSES > ---------------------------------------------------- */
 
 .header-logo{
     height: 100%; 
@@ -112,6 +137,12 @@ p {
     border: 2px solid black;
 }
 
+/* -- < LANDING CLASSES > ---------------------------------------------------- */
+
+.landing-info{
+    padding: 20px 0 0 0;
+}
+
 .landing-bg{
     position: absolute;
     top: 0;
@@ -119,10 +150,6 @@ p {
     z-index: -100;
     width: 48%;
     height: auto;
-}
-
-.landing{
-    padding: 20px 0 0 0;
 }
 
 .landing-text{
@@ -207,6 +234,23 @@ p {
     right: 140px;
     z-index: -50;
 }
+
+.service-item{
+    margin: 2%;
+    padding: 2%;
+    text-align: center;
+}
+
+.service-img, .service-title{
+    margin-bottom: 10%; 
+}
+
+.service-img{
+    height: 70px;
+    object-fit: cover;
+}
+
+/* -- < DEBBUG CLASSES > ---------------------------------------------------- */
 
 .center-line {
     position: fixed;
